--- a/_publications/2018-05-19-p1-MSITM.md
+++ b/_publications/2018-05-19-p1-MSITM.md
@@ -2,7 +2,7 @@
 title: "1. Multi-Sample Interpolation Training Method"
 collection: publications
 permalink: /publication/2018-05-19-p1-MSITM
-excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
+# excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
 date: 2018-05-19
 venue: 'Journal 1'
 paperurl: 'http://academicpages.github.io/files/p1-MSITM.pdf'
