--- a/_publications/2018-06-18-p2-WPNet.md
+++ b/_publications/2018-06-18-p2-WPNet.md
@@ -2,7 +2,7 @@
 title: "2. WPNets and PWNets: from the perspective of channel fusion"
 collection: publications
 permalink: /publication/2018-06-18-p2-WPNet
-excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
+# excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
 date: 2018-06-18
 venue: 'Journal 2'
 paperurl: 'http://academicpages.github.io/files/p2-WPNet.pdf'
