--- a/_publications/2018-05-19-p1-MSITM.md
+++ b/_publications/2018-05-19-p1-MSITM.md
@@ -1,5 +1,5 @@
 ---
-title: "1. Multi-Sample Interpolation Training Method"
+title: "1 Multi-Sample Interpolation Training Method"
 collection: publications
 permalink: /publication/2018-05-19-p1-MSITM
 # excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
