--- a/_publications/2018-05-19-p1-MSITM.md
+++ b/_publications/2018-05-19-p1-MSITM.md
@@ -10,7 +10,7 @@ citation: 'Liang, Daojun, Feng Yang, and Xiuping Wang. "Multi-Sample Interpolati
 ---
 
 [Download](http://liangdaojun.github.io/files/p1-MSITM.pdf)
-[Citation](http://liangdaojun.github.io/files/c3-Under-Mixup.bib)
+[Citation](http://liangdaojun.github.io/files/c1-MSITM.bib)
 
 **Abstract**
 The mixup training method has achieved a better generalization performance than the traditional training method. But there is no interpretation to why mixup has such a good generalization. In this paper, a series of ablation experiments were first done to prove that the training method of mixup is equivalent to a regularization and data augmentation. Then, we propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup. This method shows that the different mixing methods can achieve the same effect as the original mixup training method. Next, a network architecture that can classify multiple samples at the same time is being proposed. The network architecture prove that mixup does not only learn a linear interpolation between the two categories, but learns to separate the two categories more accurately. Finally, through the fineturning of mixup, the training precision can be further improved.
