--- a/_publications/2018-05-19-p1-MSITM.md
+++ b/_publications/2018-05-19-p1-MSITM.md
@@ -5,7 +5,7 @@ permalink: /publication/2018-05-19-p1-MSITM
 # excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
 #date: 2018-05-19
 venue: 'Journal 1'
-#paperurl: 'http://liangdaojun.github.io/files/p1-MSITM.pdf'
+paperurl: 'http://liangdaojun.github.io/files/p1-MSITM.pdf'
 citation: 'Liang, Daojun, Feng Yang, and Xiuping Wang. "Multi-Sample Interpolation Training Method." Proceedings of the 2018 International Conference on Machine Learning Technologies. 2018.'
 ---
 
