--- a/_publications/2018-06-18-p2-WPNet.md
+++ b/_publications/2018-06-18-p2-WPNet.md
@@ -5,7 +5,7 @@ permalink: /publication/2018-06-18-p2-WPNet
 # excerpt: 'We propose several different multi-sample training methods as variations of the mixup, which can also achieve comparable performance with mixup.'
 #date: 2018-06-18
 venue: 'Journal 2'
-#paperurl: 'http://liangdaojun.github.io/files/p2-WPNet.pdf'
+paperurl: 'http://liangdaojun.github.io/files/p2-WPNet.pdf'
 citation: 'Liang, Daojun, et al. "Wpnets and pwnets: from the perspective of channel fusion." IEEE Access 6 (2018): 34226-34236.'
 ---
 
